<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@drawable/apsai_main_bg"
  >
 <LinearLayout 
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:layout_weight="20"
   android:gravity="center_horizontal|center_vertical"
 	>
 	<LinearLayout
 		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:orientation="vertical"
   	>
   		<LinearLayout
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:layout_weight="1"
   			android:background="@drawable/apsai_dialog_title">
   			<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
	 		android:layout_marginLeft="43dip"
	 		android:layout_marginTop="10dip"
	 		style="@style/apsai_dialog_title_text_style"
			android:text="@string/apsai_insu_manager_user_login"/>
   		</LinearLayout>
   		<LinearLayout
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:background="@drawable/init_login_logo"
   			android:layout_weight="2"/>
   		<LinearLayout
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:background="@drawable/init_login_edit"
   			android:gravity="center_horizontal|center_vertical"
   			android:layout_weight="1">
   			<TextView android:layout_width="90dip"
		android:layout_height="wrap_content" 
		android:text="@string/apsai_insu_manager_user_name"
		android:textColor="@color/white"/>
		<EditText style="@style/apsai_edittext_style"
		android:id="@+id/user_name_edit"
		android:layout_width="176dip" 
		android:layout_height="wrap_content"
	 	android:layout_marginLeft="10dip"
	 	android:maxLines="1"
	 	android:text="800001"
	 	android:maxLength="6"
		android:textSize="18sp"/>
		</LinearLayout>
   		<LinearLayout
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:background="@drawable/init_login_edit"
   			android:gravity="center_horizontal|center_vertical"
   			android:layout_weight="1">
   		<TextView android:layout_width="90dip"
		android:layout_height="wrap_content" 
		android:text="@string/apsai_insu_manager_password"
		android:textColor="@color/white"/>
		<EditText style="@style/apsai_edittext_style"
		android:id="@+id/password_edit"
		android:layout_width="176dip" 
		android:layout_height="wrap_content"
	 	android:layout_marginLeft="10dip"
	 	android:numeric="integer"
	 	android:text="111111"
	 	android:password="true"
		android:maxLength="6"
	 	android:maxLines="1"
		android:textSize="18sp"/>
   			</LinearLayout>	
   		<LinearLayout
   			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:background="@drawable/apsai_dialog_button"
   			android:gravity="center_horizontal|center_vertical"
   			android:layout_weight="1">
   		<Button android:id="@+id/setting_in" 
		android:layout_width="120dip"
		android:layout_height="35dip" 
		android:background="@drawable/login_button"
		android:text="@string/apsai_common_sure" />
		<Button android:id="@+id/setting_out" 
		android:layout_width="120dip"
		android:layout_height="35dip"
		android:layout_marginLeft="10dip"
		android:text="@string/apsai_common_cancall"
		android:background="@drawable/login_button" />
		</LinearLayout>	
   	</LinearLayout>
 </LinearLayout>
 
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@drawable/sys_setting_button_ground">
 	<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1"
			android:gravity="center">
		<ImageButton
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:id="@+id/imgbtn_server"
			android:background="@drawable/sys_server_imgbtn"
			/>
		<TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/apsai_systeminfo_server"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="1dip" 
			android:layout_height="fill_parent"
			android:background="#69696D"
		/>
		<LinearLayout
			android:layout_width="1dip" 
			android:layout_height="fill_parent"
			android:background="#292929"
		/>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1"
			android:gravity="center">
			<ImageButton
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:id="@+id/imgbtn_printer"
			android:background="@drawable/sys_printer_imgbtn"
			/>
			<TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/apsai_systeminfo_printer"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="1dip" 
			android:layout_height="fill_parent"
			android:background="#69696D"
		/>
		<LinearLayout
			android:layout_width="1dip" 
			android:layout_height="fill_parent"
			android:background="#292929"
		/>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1"
			android:gravity="center">
		<ImageButton
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:id="@+id/imgbtn_posinfo"
			android:background="@drawable/sys_posinfo_imgbtn"
			/>
			<TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/apsai_systeminfo_posinfo"
			/>
		</LinearLayout>
 	</LinearLayout>
</LinearLayout>
