<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:background="@color/white"
	>
	<LinearLayout
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_weight="1"
	android:background="@drawable/apsai_dialog_title"
	>
	<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
	 		android:layout_marginLeft="43dip"
	 		android:layout_marginTop="10dip"
	 		style="@style/apsai_dialog_title_text_style"
			android:text="@string/apsai_systeminfo_posinfo"/>
	</LinearLayout>
			

	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_weight="1">
		>
		<TextView android:layout_width="80dip"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="20dip" 
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"
		android:text="@string/apsai_systeminfo_update_pwd"
		style="@style/apsai_dialog_text_style" />
		<EditText style="@style/apsai_edittext_style" android:id="@+id/edt_updatepwd"
		android:layout_width="170dip" android:layout_height="wrap_content"
	 	android:layout_marginLeft="10dip"
	 	android:layout_marginTop="10dip"
	 	android:layout_marginBottom="10dip"
	 	android:maxLines="1"
		android:text="" android:textSize="18sp"/>
	</LinearLayout>
		<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="1dip"
		android:orientation="horizontal"
		android:background="@color/dialog_line"
		/>
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_weight="1">
		<TextView android:layout_width="80dip"
		android:layout_height="wrap_content" 
		android:text="@string/apsai_systeminfo_timelock"
		style="@style/apsai_dialog_text_style" 
		android:layout_marginLeft="20dip" 
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"/>
		<EditText style="@style/apsai_edittext_style" android:id="@+id/edt_lucktimeout"
		android:layout_width="170dip" android:layout_height="wrap_content"
	 	android:layout_marginLeft="10dip"
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"
	 	android:numeric="integer"
	 	android:maxLines="1"
		android:text="" android:textSize="18sp"/>
	</LinearLayout>
		<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="1dip"
		android:orientation="horizontal"
		android:background="@color/dialog_line"
		/>
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_weight="1">
		<TextView 
		android:text="@string/apsai_insu_manager_sim_card"
		android:layout_width="80dip"
		android:layout_height="wrap_content" 
		style="@style/apsai_dialog_text_style" 
		android:layout_marginLeft="20dip" 
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"/>
		<EditText style="@style/apsai_edittext_style" android:id="@+id/edt_simcord"
		android:layout_width="170dip" android:layout_height="wrap_content"
	 	android:layout_marginLeft="10dip"
	 	android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"
		android:text="" android:textSize="18sp"
		android:maxLines="1"
		android:numeric="integer"/>
	</LinearLayout>
	


	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_weight="1"
		android:gravity="center_horizontal"
		android:background="@drawable/apsai_dialog_button">
	<Button android:id="@+id/setting_in" 
		android:layout_width="120dip"
		android:layout_height="35dip" 
		android:background="@drawable/login_button"
		android:layout_marginTop="10dip"
		android:text="@string/apsai_common_sure" 
		style="@style/apsai_dialog_btn_style"/>
	<Button android:id="@+id/setting_out" 
		android:layout_width="120dip"
		android:layout_height="35dip"
		android:layout_marginLeft="10dip"
		android:layout_marginTop="10dip"
		android:text="@string/apsai_common_cancall"
		android:background="@drawable/login_button" 
		style="@style/apsai_dialog_btn_style" />
	</LinearLayout>
</LinearLayout>
